[gd_scene load_steps=17 format=3 uid="uid://c6r7dvgorpxr8"]

[ext_resource type="Script" uid="uid://ceuih0ulun8ah" path="res://scripts/entities/merc.gd" id="1"]
[ext_resource type="Script" uid="uid://cal32pjkwnhqm" path="res://scripts/components/health_component.gd" id="2"]
[ext_resource type="Script" uid="uid://cwfevaa04xaa3" path="res://scripts/components/action_point_component.gd" id="3"]
[ext_resource type="Script" uid="uid://810t4ihcpy6v" path="res://scripts/components/movement_component.gd" id="4"]
[ext_resource type="Script" uid="uid://brfsipa82gl1m" path="res://scripts/components/combat_component.gd" id="5"]
[ext_resource type="Script" uid="uid://brc7ye8mq35nt" path="res://scripts/components/visual_component.gd" id="6"]
[ext_resource type="Script" uid="uid://btp3ig0khif0x" path="res://scripts/components/animation_component.gd" id="7"]
[ext_resource type="Script" uid="uid://bfv76w2gwyl5a" path="res://scripts/systems/status_effect_system.gd" id="8"]
[ext_resource type="Script" uid="uid://c8evym0w11tit" path="res://scripts/systems/stance_system.gd" id="9"]
[ext_resource type="Script" uid="uid://disedf2tygsvt" path="res://scripts/systems/facing_system.gd" id="10"]
[ext_resource type="Script" path="res://scripts/systems/line_of_sight_system.gd" id="11"]
[ext_resource type="Material" path="res://resources/materials/merc_player.tres" id="12"]
[ext_resource type="Material" path="res://resources/materials/merc_enemy.tres" id="13"]
[ext_resource type="Material" path="res://resources/materials/merc_dead.tres" id="14"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_1"]
radius = 0.3
height = 1.8

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1"]
radius = 0.3
height = 1.8

[node name="Merc" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_1")

[node name="VisualRoot" type="Node3D" parent="."]

[node name="Model" type="MeshInstance3D" parent="VisualRoot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
mesh = SubResource("CapsuleMesh_1")

[node name="WeaponAttachPoint" type="Node3D" parent="VisualRoot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, 1.2, 0)

[node name="MuzzleFlashPoint" type="Node3D" parent="VisualRoot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1.2, 0)

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("2")

[node name="ActionPointComponent" type="Node" parent="."]
script = ExtResource("3")

[node name="MovementComponent" type="Node" parent="."]
script = ExtResource("4")

[node name="CombatComponent" type="Node" parent="."]
script = ExtResource("5")

[node name="VisualComponent" type="Node" parent="."]
script = ExtResource("6")
player_material = ExtResource("12")
enemy_material = ExtResource("13")
dead_material = ExtResource("14")

[node name="AnimationComponent" type="Node" parent="."]
script = ExtResource("7")

[node name="StatusEffectSystem" type="Node" parent="."]
script = ExtResource("8")

[node name="StanceSystem" type="Node" parent="."]
script = ExtResource("9")

[node name="FacingSystem" type="Node" parent="."]
script = ExtResource("10")

[node name="LineOfSightSystem" type="Node" parent="."]
script = ExtResource("11")